    filesystem.
  * When remote.name.annexUrl is an annex+http(s) url, that
    uses the same hostname as remote.name.url, which is itself a http(s)
    url, they are assumed to share a username and password. This avoids
    unnecessary duplicate password prompts.
  * git-remote-annex: Require git version 2.31 or newer, since old
    ones had a buggy git bundle command.
  * p2phttp: Added --directory option which serves multiple git-annex
    repositories located inside a directory.

 -- Joey Hess <id@joeyh.name>  Mon, 11 Nov 2024 12:26:00 -0400

git-annex (10.20241031) upstream; urgency=medium

  * Sped up proxied downloads from special remotes, by streaming.
  * Added GETORDERED request to external special remote protocol. 
    When the external special remote responds with ORDERED, it can stream
    through a proxy.
  * p2phttp: Support serving unauthenticated users while requesting
    authentication for operations that need it. Eg, --unauth-readonly
    can be combined with --authenv.
  * p2phttp: Allow unauthenticated users to lock content by default.
  * p2phttp: Added --unauth-nolocking option to prevent unauthenticated
    users from locking content.
  * Allow enabling the servant build flag with older versions of stm,
    allowing building with ghc 9.0.2.
  * git-remote-annex: Fix bug that prevented using it with external special
    remotes, leading to protocol error messages involving "GITMANIFEST".
  * adjust: Allow any order of options when combining --hide-missing with
    options like --unlock.
  * Support P2P protocol version 4. This allows DATA-PRESENT to be sent
    after PUT (and in the HTTP P2P protocol, v4/put has a data-present
    parameter). When used with a proxy to a special remote like a S3
    bucket, this allows a custom client to upload content to S3 itself,
    and then use the P2P protocol to inform the proxy that the content has
    been stored there, which will result in the same git-annex branch state