@@ -5,4 +5,6 @@
  content="""
 And the specific reason these test cases are failing is because they have
 annex.stalldetection set, which needs to run the transferrer.
+
+Fixed this.
 """]]
